Fixed lots of the width overflow on small screens caused by default side-margins from Bootstrap rows, solved by setting side-margins to 0. Also fixed responsive designs for the following sections: - Footer - Support - Still looking for answer? - Support - Resource Center - Support - Contact Form - Support - Tell us what you need (just the text) - Support - Subscribe section - Support - Shipping Services - Support - Ads - Download App - About section - About Banner - Carousel
Still pending/need to work on next:
- Support - Navtabs
- Support - Banner (Any questions)
- Business Solutions
- Storage/Warehouse Solutions
- Why move with us
- Banner video
- Navbar

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -6,25 +6,25 @@
   --language-separator-color: $color-white;
 }
 
-.footer-out-container {
+#footer-box .footer-out-container {
   padding-bottom: 0;
 }
 
-.footer-box {
+#footer-box .footer-box {
   padding-top: 2rem;
 }
 
-.footer-logo-container {
+#footer-box .footer-logo-container {
   text-align: left;
   padding-top: 3rem !important;
   padding-bottom: 3rem !important;
 }
 
-.footer-logo-container > img {
+#footer-box .footer-logo-container > img {
   height: 40px;
 }
 
-.footer-items {
+#footer-box .footer-items {
   font-family: "Noto Sans", sans-serif;
   font-weight: 500;
   font-size: 14px;
@@ -52,4 +52,36 @@ footer.footer h5.footer-sections {
 
 footer.footer img {
   filter: brightness(0) invert(1); 
+}
+
+@media (max-width: 600px) {
+
+  #footer-box {
+    padding-bottom: 0 !important;
+  }
+
+  #footer-box .footer-container-row {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  #footer-box .footer-most-bottom {
+    display: block !important;
+    padding: 1.5rem;
+    margin: 0 !important;
+    text-align: center;
+  }
+
+  #footer-box .footer-most-bottom-sec {
+    margin-bottom: 3rem !important;
+  }
+  
+  #footer-box .footer-socials {
+    display: flex;
+    justify-content: center;
+  }
+  
+  #footer-box .footer-socials > ul {
+    margin: 16px 0;
+  }
 }
