--- a/src/css/support-sec-3-contact-us.css
+++ b/src/css/support-sec-3-contact-us.css
@@ -202,3 +202,10 @@
     width: 1000px;
   }
 }
+
+@media (max-width: 638px) {
+  #contact-us .support-contact-us-container {
+    padding-left: 5vw;
+    padding-right: 5vw;
+  }
+}
